force-app/main/default/objects/Credit_Notes__c/Credit_Notes__c.object-meta.xml
<CustomObject>
    <label>Credit Notes</label>
    <nameField>
        <label>Credit Note Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>