force-app/main/default/objects/Credit_Notes__c/fields/Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Amount__c</fullName>
    <label>Credit Note Amount</label>
    <length>254</length>
    <type>Text</type>
</CustomField>