force-app/main/default/objects/Credit_Notes__c/fields/Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reason__c</fullName>
    <label>Credit Note Reason</label>
    <type>TextArea</type>
</CustomField>